--- a/Makefile.mingw
+++ b/Makefile.mingw
@@ -4,12 +4,12 @@ CC=gcc
 CXX=g++
 COBJS=keytar.o hidapi/windows/hid.o
 OBJS=$(COBJS) $(CPPOBJS)
-CFLAGS=-Ihidapi/hidapi -g -c
+CFLAGS=-Ihidapi/hidapi -c
 LIBS= -lsetupapi
 DLL_LDFLAGS = -mwindows -lsetupapi
 
 keytar.exe: $(OBJS)
-	g++ -g $^ $(LIBS) -o keytar
+	g++ $^ $(LIBS) -o keytar
 
 $(COBJS): %.o: %.c
 	$(CC) $(CFLAGS) $< -o $@
